fix: issue fix for results section overlap on mobile screens (#554)

--- a/src/assets/css/sass/home/_searchResults.scss
+++ b/src/assets/css/sass/home/_searchResults.scss
@@ -78,6 +78,7 @@
 @media (max-width: 767.98px) {
   .results h2 {
     text-align: center;
+    margin-top: 15%;
   }
 
   .searchResults {
